--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
+    "csstype": "^3.1.2",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "graphql": "^16.7.1",
